opened and started MyProfile page

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -2,7 +2,9 @@
     width: 100%;
     align-items: center;
     font-family: "Arial", sans-serif;
-    color: #3e497a;
+    color:  	#f6f6f6;
+    background-color:	#0f1628;
+    text-align: center;
   }
   
   
